style.css
/* ... */
html {
  overflow-x: hidden;
}
body {
  min-height: 100vh;
  font-size: 100%;
  line-height: 1.5;
  text-rendering: optimizeSpeed;
  overflow-x: hidden;
  font-family: 'Poppins', sans-serif;
  font-family: 'Patrick Hand', cursive;
}
/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: rgb(34, 34, 34);
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #7579ff;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #5f64ff;
}
h1,h2,h3,h4,h5{
  font-family: 'Patrick Hand', cursive;
  font-family: 'Bungee Shade', cursive;
  font-family: 'Oregano', cursive;
}
header{
  height: fit-content;
  text-align: center;
  /* background-image: radial-gradient(var(--green) 15%, transparent 20%); */
  /* radial-gradient(#fafafa 20%, transparent 20%); */
  background-color: var(--black);
  /* background-position: 0 0, 50px 50px;
  background-size: 50px 50px; */
  position: relative;
  overflow: hidden;
  min-height: 100vh;
  display: flex;
  justify-content: center;
}
header::after{
  content: " ";
  position: absolute;
  height: 25vw;
  width: 25vw;
  border-radius: 25vw;
  background-image: linear-gradient(to top, #b224ef 0%, #7579ff 100%);
  animation: mover 20s ease infinite;
}
header::before{
  content: " ";
  position: absolute;
  height: 25vw;
  width: 25vw;
  border-radius: 25vw;
  background-image: linear-gradient(to top, #b224ef 0%, #7579ff 100%);
  animation: mover1 20s ease infinite;
}
@keyframes mover{
  0%{top:-8%;
    background-position: 0% 0%;
    left:0%}
  25%{top:25%;
      left:25%;}
  50%{top:75%;
      left:0%;
    background-position: 100% 100%;}
  75%{left:25%;}
  100%{top:-8%;
        left: 0%;
      background-position: 0% 0%;}
}
@keyframes mover1{
  0%{bottom:-8%;
    background-position: 100% 100%;
    right: 0%;}
  25%{bottom:25%;
      right: 25%;}
  50%{bottom:75%;
    background-position: 0% 0%;
      right: 0%;}
  75%{right: 25%;}
  100%{bottom:-8%;
    background-position: 100% 100%;
      right:0%}
}
@media (max-width:594px){
  header::after{
    height: 25%;
    width: 20vw;
    border-radius: 20vw;
  }
  header::before{
    height: 25%;
    width: 20vw;
    border-radius: 20vw;
  }
}
header .container{
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  padding: 1rem;
  z-index: 2;
}
header .container h1{
  padding: 10vw;
  font-size: 5rem;
  position: relative;
  font-family: 'Caveat', cursive;
  font-family: 'Oregano', cursive;
}
header .container h1::after{
  content: " ";
  position: absolute;
  top: 0;
  left: 0;
  border: 10px double var(--green);
  height: 100%;
  width: 100%;
}
header .container p{
  background-color: var(--black);
  font-size: 1.3rem;
  padding: 0.5rem;
  border-radius: 2rem;
  font-family: 'Patrick Hand', cursive;
}
header .container h1:hover::after{
 animation: 1s bigger ease infinite;
}
header .container h2{
  margin-top: 1rem;
  padding: 1rem;
  border-radius: 1rem;
  font-family: 'Patrick Hand', cursive;
}
header .container a svg{
  height: 50%;
  animation: 0.3s rotator ease 5;
  animation-delay: 2s;
  margin-right: 2.5rem;
  margin-left: 0.5rem;
}
header .container a:nth-child(4):hover{
  background-color: black;
  color: #7579ff;
  border: 2px solid #7579ff;
}
header .container a:hover svg{
  animation: 0.3s rotator ease infinite;
}
header .container a:hover svg path{
    fill: #7579ff;
}
header .container a:nth-child(4){
  /* display: flex;
  width: 10rem;
  height: 5rem;
  text-align: center;*/
  padding: 1.5rem;
  color: black;
  font-weight: bolder;
  border-radius: 1.5rem;
  background-color: #7579ff; 
  display: flex;
  justify-content: center;
  align-items: center;
  white-space: nowrap;
  border: 2px solid transparent;
  font-size: 1.4rem;
}
header .container a:nth-child(4) span{
  display: flex;
  align-items: center;
}
header .container a:nth-child(4) svg{
  height: 35px;
  width: 35px;
}
.skip-link{
  display: none;
}
.skip-link:focus{
  display: block;
}
@keyframes bigger{
  0%{border: 10px double var(--green);}
  75%{border: 20px double wheat;}
}
@keyframes rotator{
  50%{transform: 180deg;}
  100%{transform: rotate(360deg);}
}
nav{
  background-color: #002f47;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
}
nav ul{
  list-style: none;
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
  min-height: 10vh;
  align-items: center;
  margin: 0;
}
nav ul li{
  font-size: 1.4rem;
  width: 180px;
  font-weight: bold;
  overflow: hidden;
}
nav ul li a{
  overflow-x: hidden;
  position: relative;
}
nav ul li a::after{
 content: " ";
 position: absolute;
 bottom: 0;
 left: 0;
 width: 100%;
 height: 10%;
 margin-top: 0.2rem;
 background-color: wheat;
 visibility: hidden;
}
nav ul li a:hover:after{
  visibility: visible;
  animation: grower 1s ease;
}
@keyframes grower{
  0%{width: 0%;}
  75%{width: 100%;}
}
@media (max-width:580px){
  nav ul li{
    margin: 0.5rem 0;
  }
}
#about .container h2{
  font-size: 2.5rem;
  margin: 1rem 0;
  text-align: center;
  position: relative;
  padding: 1rem;
}
#about .container:nth-child(1){
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  position: relative;
  min-height: 100vh;
}
#about .container h2::after{
  content: " ";
  width: 25%;
  height: 5px;
  position: absolute;
  right: 0;
  bottom: 0;
  background-color: #14a76c;
  border-radius: 5px 0 0 5px;
  /* animation: widhter_left 2s ease infinite; */
}
#about .container:nth-child(1) > p{
  align-self: flex-end;
  width: 50%;
}
#about .container h2::before{
  content: " ";
  width: 25%;
  left: 0;
  top: 0;
  height: 5px;
  position: absolute;
  background-color: #14a76c;
  border-radius: 0 5px 5px 0;
  /* animation: widhter_left 2s ease infinite; */
}
#about .container:hover h2::after{
  animation: widhter_left 10s ease infinite;
}
#about .container:hover h2::before{
  animation: widhter_left 10s ease infinite;
}
/* ... */

